[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctx-finder"
version = "0.1.0"
description = "Suggests codebase files relevant to AI coding assistant tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
ctx = "ctx_finder.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
